--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
+# Ignore log files
 *.log
+
+# Ignore compiled class files
+*.class
+
+# Ignore bin directory (where compiled files are stored)
+bin/
