--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ bin/
 
 # Ignore .project file (Eclipse project file)
 .project
+
+# Ignore .metadata directory (where Eclipse workspace settings are stored)
+.metadata/
+
+# Ignore .classpath file (Eclipse classpath file)
+.classpath
