--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,10 @@
-# Ignore log files
 *.log
+
+# Ignore javadoc config file
+src/channels/config.jdgenerator
+src/config.jdgenerator
 
 bin/
 
 .project
 
-.settings/
-
-target/
-
-.classpath
-
-.idea/
-
-.metadata/
